# data-preprocess

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_preprocess.ipynb  02_pitch_umap_cluster.ipynb  03_build_profiles.ipynb  04_build_matchup_dataset.ipynb
src/: embedding.py  fetch.py  io_utils.py  matchup.py  preprocess.py  profiles.py
